--- a/account/templates/account/friend_requests_list.html
+++ b/account/templates/account/friend_requests_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>{% blocktrans %}Anfragen{% endblocktrans %}</h1>
-    <h2>Eingegangen</h2>
+    <h2>{% trans 'Eingegangen' %}</h2>
     {% if received_friend_requests %}
     <table>
         <tr>
