--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -255,3 +255,10 @@ select:focus, select:hover {
     width: 90%;
     border: 2px solid gray;
 }
+
+.login-form input {
+    display: block;
+    margin: auto auto;
+    margin-top: 5px;
+    font-size: 16px;
+}
