--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -5,7 +5,7 @@
 {% block title %}{% blocktrans %}Home{% endblocktrans %}{% endblock %}
 
 {% block content %}
-	<p>{% blocktrans with v0=user.username %}Willkommen, {{ v0 }}.{% endblocktrans %}</p>
+	<p>{% blocktrans with v0=user.username %}Willkommen, {{ v0 }}.{% endblocktrans %} {% trans 'Ist irgendwas? Schicken Sie' %} <a href="{% url 'account:detail' 'admin' %}">admin</a> {% trans 'eine Freundschaftsanfrage.' %}</p>
     {% if user.image %}<img src="{{ user.image.url }}" class="user-photo">{% endif %}
     <p><a href="{% url 'account:user_post_list' %}">{% blocktrans %}Zu Ihren Posts...{% endblocktrans %}</a></p>
     {% if user.activities.all %}
@@ -14,4 +14,5 @@
     {% else %}
         <p>{% blocktrans %}Sie sind zurzeit kein Mitglied einer Aktivität.{% endblocktrans %}</p>
     {% endif %}
+    <br>
 {% endblock %}
