--- a/multiplayer/templates/multiplayer/game.html
+++ b/multiplayer/templates/multiplayer/game.html
@@ -6,7 +6,7 @@
     <div class="button-like back">
         <a href="{% call_method match 'lobby_url' request %}">Lobby</a>
     </div>
-    <div class="button-like leave" onclick="createYesNoAlert('{% trans 'Spiel beenden und verlassen?' %}', 2, function() { location.href = '{% url 'multiplayer:leave_match' match.activity.name match.id %}'});">
+    <div class="button-like leave" onclick="createYesNoAlert('{% trans 'Spiel beenden, verlassen und zurücksetzen?' %}', 2, function() { location.href = '{% url 'multiplayer:leave_match' match.activity.name match.id %}'});">
         {% trans "Ciao!" %}
     </div>
     <div class="game-field">
