--- a/account/templates/style/queries.css
+++ b/account/templates/style/queries.css
@@ -25,6 +25,28 @@
     .sidemenu {
         display: none;
     }
+    
+    .list .item {
+        width: 125px;
+        height: 150px;
+        font-size: 12px;
+    }
+    .list .item .image {
+        max-width: 100px;
+        max-height: 60%;
+        border-radius: 20%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        object-fit: cover;
+    }
+    .list .item .subtext {
+        margin: 5px 10px;
+    }
+    .list .item.fixed {
+        width: 200px;
+        height: 200px;
+    }
 }
 
 @media screen and (min-width: 850px) {
