--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -256,3 +256,15 @@ select:focus, select:hover {
     margin-top: 5px;
     font-size: 16px;
 }
+
+.cookie-alert {
+    background-color: black;
+    color: white;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 30%;
+    right: 30%;
+    border-radius: 10px;
+    z-index: 1;
+}
