--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -40,6 +40,7 @@ input[type='text'], textarea, select:focus {
 
 .login {
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+    padding: 0px 5px;
 }
 
 a:link {
