--- a/account/templates/account/500.html
+++ b/account/templates/account/500.html
@@ -5,7 +5,11 @@
 
 {% block content %}
 <h1>{% trans "Fehler: 500 - Server Fehler" %}</h1>
-<p>{% trans "Da kann entweder jemand nicht programmieren (*HUST*), oder jemand versucht hier absichtlich einen Fehler zu verursachen." %} {% trans "Falls Sie das traurig machen sollte, hier ein paar ausgewählte Witze: " %}</p>
+<p>{% trans "Da kann entweder jemand nicht programmieren (*HUST*), oder jemand versucht hier absichtlich einen Fehler zu verursachen." %}
+{% if exception %}
+{% trans "Fehlerbeschreibung: " %} {{ exception }}<br>
+{% endif %}
+{% trans "Falls Sie das traurig machen sollte, hier ein paar ausgewählte Witze: " %}</p>
 
 {% include 'account/jokes.html' %}
 {% endblock %}
