--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -210,6 +210,7 @@ select:focus, select:hover {
     height: 200px;
     float: left;
     margin: 10px 10px;
+    padding-bottom: 5px;
     border: 1px solid black;
     border-radius: 10%;
     color: white;
