--- a/account/templates/account/banner.html
+++ b/account/templates/account/banner.html
@@ -10,7 +10,7 @@
     border-radius: 10px;
     padding: 0px 5px 15px 5px;
     color: white;
-    font-family: "Courier New", "Lucida Console", monospace;
+    font-family: "Arial", "Verdana", "Helvectica";
 }
 
 .cookie-banner a {
