--- a/account/templates/style/chatmenu.css
+++ b/account/templates/style/chatmenu.css
@@ -5,7 +5,7 @@
     width: 100px;
     background-color: black;
     color: white;
-    font-family: "Courier New", "Lucida Console", monospace;
+    font-family: "Arial", "Verdana", "Helvectica";
     display: none;
 }
 
