--- a/chat/templates/chat/chat_list.html
+++ b/chat/templates/chat/chat_list.html
@@ -10,25 +10,17 @@
 {% with new_messages=user.get_latest_messages %}
     <h1>{% trans "Chat-Liste" %}</h1>
     {% if group_rooms %}<h2>{% trans "Gruppen" %}</h2>{% endif %}
-    {% for room in group_rooms %}
-        <p>
-            <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% chat_star new_messages room.id %}
-        </p>
-    {% endfor %}
+    {% include 'chat/room_loop.html' with default_img='icons/users-and-groups-group@32px.png' rooms=group_rooms %}
     {% if friend_rooms %}<h2>{% trans "Freunde" %}</h2>{% endif %}
-    {% for room in friend_rooms %}
-        <p>
-            <a href="{{ room.get_absolute_url }}">{% call_method room 'title_for' user %}</a>{% chat_star new_messages room.id %}
-        </p>
-    {% endfor %}
+    {% include 'chat/room_loop.html' with default_img='icons/users-and-groups-user@32px.png' rooms=friend_rooms %}
     {% if match_rooms %}<h2>{% trans "Matches" %}</h2>{% endif %}
-    {% for room in match_rooms %}
+    {% for room, target in match_rooms %}
         <p>
             <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% chat_star new_messages room.id %}
         </p>
     {% endfor %}
     {% if tournament_rooms %}<h2>{% trans "Turniere" %}</h2>{% endif %}
-    {% for room in tournament_rooms %}
+    {% for room, target in tournament_rooms %}
         <p>
             <a href="{{ room.get_absolute_url }}">{{ room.target.verbose }}</a>{% chat_star new_messages room.id %}
         </p>
