--- a/wall/templates/wall/post/post_loop.html
+++ b/wall/templates/wall/post/post_loop.html
@@ -2,11 +2,13 @@
 {% load i18n %}
 {% include "account/pagination.html" with page=posts %}
 {% for post in posts %}
-    <p><b><i>
-        {{ post.created|date:"SHORT_DATETIME_FORMAT" }}, <a href="{{ post.category.get_absolute_url }}">{{ post.category.verbose }}</a>{% if post.activity %}: <a href="{{ post.activity.get_absolute_url }}">{{ post.activity }}</a>{% endif %}, {% trans "von" %} <a href="{{ post.author.get_absolute_url }}">{{ post.author }}</a>{% if post.group %} (<a href="{{ post.group.get_absolute_url }}">{{ post.group }}</a>){% endif %}
+    <div class="post">
+    <b><i>
+    {{ post.created|date:"SHORT_DATETIME_FORMAT" }}, <a href="{{ post.category.get_absolute_url }}">{{ post.category.verbose }}</a>{% if post.activity %}: <a href="{{ post.activity.get_absolute_url }}">{{ post.activity }}</a>{% endif %}, {% trans "von" %} <a href="{{ post.author.get_absolute_url }}">{{ post.author }}</a>{% if post.group %} (<a href="{{ post.group.get_absolute_url }}">{{ post.group }}</a>){% endif %}
         {% if post.author == user %}
             <a href="{% url 'wall:delete_post' post.id request.path %}">{% blocktrans %}[Löschen]{% endblocktrans %}</a>
-        {% endif %}</b></i>{{ post.message|markdown }}
+        {% endif %}</i></b>
+        {{ post.message|markdown }}
         {% if post.audio %}
             <audio controls>
                 <source src="{{ post.audio.url }}" type="{{ post.media_mime_type }}">
@@ -23,8 +25,8 @@
             <a href="{{ comment.author.get_absolute_url }}">{{ comment.author }}</a>, {% blocktrans with v0=comment.created|timesince %} vor {{ v0 }}{% endblocktrans %}{% if comment.author == user %} <a href="{% url 'wall:delete_comment' comment.id request.path %}">{% blocktrans %}[Löschen]{% endblocktrans %}</a>{% endif %}: {{ comment.message }}
         {% endfor %}
         <a href="{% url 'wall:create_comment' post.id request.path %}">{% blocktrans %}Kommentieren...{% endblocktrans %}</a>
+    </div>
     {% empty %}
         <b>{% trans "Keine" %}.</b>
-    </p>
 {% endfor %}
 {% include "account/pagination.html" with page=posts %}
