--- a/activity/templates/activity/category_detail.html
+++ b/activity/templates/activity/category_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load i18n %}
 
 {% block title %}{{ category.name }}{% endblock %}
@@ -9,8 +10,8 @@
     {% endif %}
     <h1 class="center-container">{{ category.verbose }}</h1>
     <p class="center-container"><i>{{ category.description }}</i></p>
-    <h2><a href="{% url 'usergroups:group_list' category.id %}">{% trans "Zu den Gruppen" %}</a></h2>
-    
+    <h2>
+        <div class="button-like" onclick=openLink("{% url 'usergroups:group_list' category.id %}")><img src="{% static 'icons/groups.png' %}">{% trans "Zu den Gruppen" %}</h2>
     <p>{% trans "Folgende Aktivitäten gehören zu dieser Kategorie" %}:</p>
         {% include "activity/loop.html" with activities=category.activities%}
     <div class="profile-rest">
