--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -28,6 +28,7 @@
             </div>
         {% endif %}
     </div>
+    <p style="clear: both"></p>
     {% endif %}
         <a class="center-container" href="{% url 'activity:leave' activity.name %}"><button class="blue-button">{% trans "Austreten" %}</button></a>
         <h3>{% trans "Suche nach Mitgliedern" %}</h3>
