--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -28,7 +28,7 @@
             </div>
         {% endif %}
     </div>
-    <p style="clear: both"></p>
+    <p style="clear: both;"></p>
     {% endif %}
         <a class="center-container" href="{% url 'activity:leave' activity.name %}"><button class="blue-button">{% trans "Austreten" %}</button></a>
         <h3>{% trans "Suche nach Mitgliedern" %}</h3>
@@ -41,7 +41,6 @@
         </p>
         <a class="center-container" href="{% url 'activity:join' activity.name %}"><button class="blue-button">{% trans "Beitreten" %}</button></a>
     {% endif %}
-    </p>
 
     <h3>{% trans "Beiträge" %} {{ chosen_component|inim }}</h3>
     <h2><a href="{% url 'wall:create_post' 'activity' 'activity' activity.id activity.id %}">{% blocktrans %}Post erstellen...{% endblocktrans %}</a></h2>
