--- a/multiplayer/templates/multiplayer/game.html
+++ b/multiplayer/templates/multiplayer/game.html
@@ -29,6 +29,6 @@
         </div>
     </div>
     <div class="button-like join-audio" id="join-audio" onclick="joinAudio();">
-        <img src="{% static 'icons/login.png' %}">{% trans 'Audiokonferenz' %}
+        <img src="{% static 'icons/login.png' %}">{% trans 'Konferenz' %}
     </div>
 </div>
